// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`json-schema it should generate schemas from dual codecs 1`] = `
Object {
  "additionalProperties": false,
  "definitions": Object {},
  "properties": Object {
    "created_at": Object {
      "type": "string",
    },
  },
  "required": Array [
    "created_at",
  ],
  "type": "object",
}
`;

exports[`json-schema it should generate schemas from dual codecs 2`] = `
Object {
  "additionalProperties": false,
  "definitions": Object {},
  "properties": Object {
    "created_at": Object {
      "nodeType": "date",
    },
  },
  "required": Array [
    "created_at",
  ],
  "type": "object",
}
`;

exports[`json-schema it should generate schemas from recursive codecs 1`] = `
Object {
  "$ref": "#/definitions/RecursiveCodec",
  "definitions": Object {
    "RecursiveCodec": Object {
      "additionalProperties": false,
      "properties": Object {
        "a": Object {
          "type": "string",
        },
        "b": Object {
          "$ref": "#/definitions/RecursiveCodec",
        },
      },
      "required": Array [
        "a",
      ],
      "type": "object",
    },
  },
}
`;

exports[`json-schema it should handle a simple identity schema 1`] = `
Object {
  "additionalProperties": false,
  "definitions": Object {},
  "properties": Object {
    "any": Object {},
    "array": Object {
      "items": Object {
        "type": "string",
      },
      "type": "array",
    },
    "boolean": Object {
      "type": "boolean",
    },
    "deeper_array": Object {
      "items": Object {
        "additionalProperties": false,
        "properties": Object {
          "a": Object {
            "type": "string",
          },
        },
        "required": Array [
          "a",
        ],
        "type": "object",
      },
      "type": "array",
    },
    "enum": Object {
      "enum": Array [
        "a",
        "b",
      ],
      "type": "string",
    },
    "intersection": Object {
      "anyOf": Array [
        Object {
          "additionalProperties": false,
          "properties": Object {
            "a": Object {
              "type": "string",
            },
            "b": Object {
              "type": "number",
            },
          },
          "required": Array [
            "a",
            "b",
          ],
          "type": "object",
        },
        Object {
          "additionalProperties": false,
          "properties": Object {
            "a": Object {
              "type": "string",
            },
            "c": Object {
              "type": "number",
            },
          },
          "required": Array [
            "a",
            "c",
          ],
          "type": "object",
        },
      ],
    },
    "literal": Object {
      "const": "literal",
      "type": "string",
    },
    "multi": Object {
      "anyOf": Array [
        Object {
          "type": "string",
        },
        Object {
          "type": "number",
        },
        Object {
          "type": "boolean",
        },
      ],
    },
    "null": Object {
      "type": "null",
    },
    "number": Object {
      "type": "number",
    },
    "optional": Object {
      "type": "string",
    },
    "record": Object {
      "additionalProperties": Object {
        "type": "string",
      },
      "properties": Object {},
      "required": Array [],
      "type": "object",
    },
    "string": Object {
      "type": "string",
    },
    "tuple": Object {
      "items": Array [
        Object {
          "type": "string",
        },
        Object {
          "type": "number",
        },
      ],
      "maxItems": 2,
      "minItems": 2,
      "type": "array",
    },
    "with_description": Object {
      "description": "This is a description",
      "type": "string",
    },
  },
  "required": Array [
    "string",
    "number",
    "boolean",
    "any",
    "null",
    "literal",
    "enum",
    "tuple",
    "multi",
    "array",
    "deeper_array",
    "record",
    "intersection",
    "with_description",
  ],
  "type": "object",
}
`;

exports[`json-schema it should intersect a set of only unions 1`] = `
Object {
  "allOf": Array [
    Object {
      "anyOf": Array [
        Object {
          "additionalProperties": false,
          "properties": Object {
            "a": Object {
              "type": "string",
            },
          },
          "required": Array [
            "a",
          ],
          "type": "object",
        },
        Object {
          "additionalProperties": false,
          "properties": Object {
            "b": Object {
              "type": "string",
            },
          },
          "required": Array [
            "b",
          ],
          "type": "object",
        },
      ],
    },
    Object {
      "anyOf": Array [
        Object {
          "additionalProperties": false,
          "properties": Object {
            "c": Object {
              "type": "string",
            },
          },
          "required": Array [
            "c",
          ],
          "type": "object",
        },
        Object {
          "additionalProperties": false,
          "properties": Object {
            "d": Object {
              "type": "string",
            },
          },
          "required": Array [
            "d",
          ],
          "type": "object",
        },
      ],
    },
  ],
  "definitions": Object {},
}
`;

exports[`json-schema it should merge intersections 1`] = `
Object {
  "additionalProperties": false,
  "definitions": Object {},
  "properties": Object {
    "a": Object {
      "type": "string",
    },
    "b": Object {
      "type": "string",
    },
    "c": Object {
      "type": "string",
    },
  },
  "required": Array [
    "a",
    "b",
    "c",
  ],
  "type": "object",
}
`;

exports[`json-schema it should merge intersections 2`] = `
Object {
  "additionalProperties": false,
  "definitions": Object {},
  "properties": Object {
    "a": Object {
      "type": "string",
    },
  },
  "required": Array [
    "a",
  ],
  "type": "object",
}
`;

exports[`json-schema it should product intersections containing union and object schemas 1`] = `
Object {
  "anyOf": Array [
    Object {
      "additionalProperties": false,
      "properties": Object {
        "a": Object {
          "type": "string",
        },
        "b": Object {
          "type": "string",
        },
      },
      "required": Array [
        "a",
        "b",
      ],
      "type": "object",
    },
    Object {
      "additionalProperties": false,
      "properties": Object {
        "a": Object {
          "type": "string",
        },
        "c": Object {
          "type": "string",
        },
      },
      "required": Array [
        "a",
        "c",
      ],
      "type": "object",
    },
  ],
  "definitions": Object {},
}
`;
